--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -290,7 +290,7 @@
                         {% endif %}
                         {% if request.user|user_belongs_to_group:'tecnica' %}
                         <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
-                            <a href="{% url 'disponiblilidad' %}"  >
+                            <a href="{% url 'pedido_granja' %}"  >
                                 <i class="nav-icon  fas fa-cart-plus"></i>Pedido a Granja
                             </a>
                         </li>
