--- a/login/templates/pedido_granja.html
+++ b/login/templates/pedido_granja.html
@@ -60,30 +60,41 @@
             background-color: #c45454;
             color: #ffffff;
         }
+
         .table-responsive {
             position: relative;
-            max-height: 400px; /* Cambia esto según sea necesario */
-            overflow-y: auto;  /* Habilita el scroll vertical */
+            max-height: 400px;
+            /* Cambia esto según sea necesario */
+            overflow-y: auto;
+            /* Habilita el scroll vertical */
         }
 
         .table {
-            width: 100%; /* Asegúrate de que la tabla ocupe todo el ancho */
-            border-collapse: collapse; /* Colapsa los bordes */
+            width: 100%;
+            /* Asegúrate de que la tabla ocupe todo el ancho */
+            border-collapse: collapse;
+            /* Colapsa los bordes */
         }
 
         .thead-light {
-            position: sticky; /* Hace que el encabezado sea "pegajoso" */
-            top: 0; /* Fija el encabezado en la parte superior del contenedor */
-            background-color: white; /* Color de fondo del encabezado */
-            z-index: 10; /* Asegúrate de que el encabezado esté por encima del resto de la tabla */
+            position: sticky;
+            /* Hace que el encabezado sea "pegajoso" */
+            top: 0;
+            /* Fija el encabezado en la parte superior del contenedor */
+            background-color: white;
+            /* Color de fondo del encabezado */
+            z-index: 10;
+            /* Asegúrate de que el encabezado esté por encima del resto de la tabla */
         }
 
         .tdd {
-            text-align: center; /* Alinea el texto al centro */
-            padding: 8px; /* Añade padding a las celdas */
-            border-bottom: 1px solid #dee2e6; /* Añade un borde inferior a las celdas */
+            text-align: center;
+            /* Alinea el texto al centro */
+            padding: 8px;
+            /* Añade padding a las celdas */
+            border-bottom: 1px solid #dee2e6;
+            /* Añade un borde inferior a las celdas */
         }
-
     </style>
     {% endblock %}
 
@@ -212,22 +223,21 @@
                                     </div>
                                 </div>
 
-                                <div style="margin-top: 1%; margin-bottom: 2%;">
-                                    <div class="table-responsive scrollSolicitudGranja">
-                                        <table class="table align-middle" id="tablaSolicitudCerdosGranja">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">Producto</th>
-                                                    <th scope="col">Cantidad</th>
-                                                    <th scope="col">Observacion</th>
-                                                    <th scope="col">Frigorífico</th>
-                                                    <th scope="col">Fecha</th>
-                                                    <th scope="col">Acción</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="TablaSolicitudGranja"></tbody>
-                                        </table>
-                                    </div>
+                                <div class="table-responsive scrollSolicitudGranja">
+                                    <table class="table table-striped table-bordered table-hover"
+                                        id="tablaSolicitudCerdosGranja">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Producto</th>
+                                                <th scope="col">Cantidad</th>
+                                                <th scope="col">Observación</th>
+                                                <th scope="col">Frigorífico</th>
+                                                <th scope="col">Fecha</th>
+                                                <th scope="col">Acción</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="TablaSolicitudGranja"></tbody>
+                                    </table>
                                 </div>
                                 <button id="solicitarPedido" class="btn btn-warning"
                                     style="float: right; margin-top: 2%; margin-bottom: 7%;">
@@ -266,9 +276,10 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <label for="FechaFin">Fecha Fin:</label>
-                                                <input id="FechaFin" name="FechaFin" class="form-control" type="date" required="">
+                                                <input id="FechaFin" name="FechaFin" class="form-control" type="date"
+                                                    required="">
                                             </div>
-                                            
+
                                         </div>
                                     </div>
 
@@ -291,7 +302,7 @@
 
                     <!-- Scripts personalizados -->
                     <script>
-                       $(document).ready(function () {
+                        $(document).ready(function () {
                             $('#formRangoFecha').on('submit', function (e) {
                                 e.preventDefault();
 
@@ -313,7 +324,16 @@
                                     success: function (response) {
                                         // Limpiar la tabla antes de agregar nuevos datos
                                         $('#tablaVistaSolicitud tbody').empty();
+                                        // Obtener las granjas de la respuesta del servidor
+                                        let granjas = response.map(function (item) {
+                                            return item.nombre_granja;
+                                        });
 
+                                        // Actualizar el selector de granjas
+                                        $('#granjas').empty();
+                                        granjas.forEach(function (granja) {
+                                            $('#granjas').append(`<option value="${granja}">${granja}</option>`);
+                                        });
                                         response.forEach(function (item) {
                                             // Obtener el día de la semana de la fecha de disponibilidad
                                             const fecha = new Date(item.fecha_disponibilidad);
@@ -358,8 +378,8 @@
                                                     <td>${diaNombre === 'Do' ? item.disponibilidad_cantidad : 0}</td>
                                                     <td>${0}</td>
                                                     <td>${item.disponibilidadRestante}</td> 
-                                                    <td>${0}</td> 
-                                                    <td><button class="btn btn-danger">Eliminar</button></td>
+                                                    <td>${item.disponibilidadRestante}</td> 
+                                                    <td><button class="btn btn-info">Editar</button></td>
                                                 </tr>`
                                             );
                                         });
@@ -369,6 +389,57 @@
                                     }
                                 });
                             });
+                        });
+                        $(document).ready(function () {
+                            $.ajax({
+                                url: '/frigorificos/',
+                                type: 'GET',
+                                success: function (response) {
+                                    // Almacenar los datos en una variable
+                                    var frigorificos = response.frigorificos;
+                                    $('#bt_add').on('click', function () {
+                                        // Obtener la granja seleccionada
+                                        let granja = $('#granjas').val();
+
+                                        // Agregar una nueva fila a la tabla
+                                        $('#TablaSolicitudGranja').append(`
+                                    <tr>
+                                        <td>
+                                            <input type="text" name="producto[]" value="CERDO" placeholder="Producto" class="form-control">
+                                        </td>
+                                        <td>
+                                            <input type="number" name="cantidad[]" value="" placeholder="Cantidad" class="form-control">
+                                        </td>
+                                        <td>
+                                            <input type="text" name="observacion[]" value="" placeholder="Observación" class="form-control">
+                                        </td>
+                                          <td>
+                                            <select name="frigorifico[]" class="form-control">
+                                                <option value="">Seleccione un frigorífico</option>
+                                                ${frigorificos.map(function (frigorifico) {
+                                            return `<option value="${frigorifico.id}">${frigorifico.nombre}</option>`;
+                                        }).join('')}
+                                            </select>
+                                        </td>
+                                        <td>
+                                            <input type="date" name="fecha[]" value="" placeholder="Fecha" class="form-control">
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-danger" onclick="eliminarFila(this)">Eliminar</button>
+                                        </td>
+                                    </tr>
+                                 `);
+                                    });
+                                },
+                                error: function (error) {
+                                    console.log('Error:', error);
+                                }
+                            });
+
+                            // Función para eliminar una fila de la tabla
+                            function eliminarFila(elemento) {
+                                $(elemento).closest('tR').remove();
+                            }
                         });
                     </script>
 
