--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -274,13 +274,7 @@
 
                     </ul>
                 </li>
-                {% if request.user|user_belongs_to_group:'tecnica' %}
-                        <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
-                            <a href="{% url 'repremision' %}"  >
-                                <i class="nav-icon fas fa-qrcode"></i>Remisiones
-                            </a>
-                        </li>
-                        {% endif %}
+                
                         {% if request.user|user_belongs_to_group:'tecnica' %}
                         <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
                             <a href="{% url 'disponiblilidad' %}"  >
@@ -292,6 +286,20 @@
                         <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
                             <a href="{% url 'pedido_granja' %}"  >
                                 <i class="nav-icon  fas fa-cart-plus"></i>Pedido a Granja
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if request.user|user_belongs_to_group:'tecnica' %}
+                        <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
+                            <a href="{% url 'repdespacho' %}"  >
+                                <i class="nav-icon  fas fa-industry"></i>Despacho a Frigorificos
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if request.user|user_belongs_to_group:'tecnica' %}
+                        <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
+                            <a href="{% url 'repremision' %}"  >
+                                <i class="nav-icon fas fa-qrcode"></i>Remisiones
                             </a>
                         </li>
                         {% endif %}
