--- a/login/templates/despacho_frigos.html
+++ b/login/templates/despacho_frigos.html
@@ -9,6 +9,8 @@
     <title>Despacho</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <link rel="stylesheet" href="https://lottie.host/763cf412-414d-4482-b45f-0aeb759d43b1/azaQx9j1O1.json">
 
     {% block meta %}
     <meta charset="utf-8">
@@ -230,6 +232,19 @@
                             </div>
                         </div>
                     </div>
+                    <!-- GIF Loader -->
+                    <div id="loadingGif" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 9999;">
+                        <img src="{% static 'images/despacho.gif' %}" alt="Processing..." style="width: 250px; height: 250px;">  <!-- Adjust size here -->
+                    </div>
+                    <!-- Lottie Loader -->
+                    <div id="loadingLottie" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 9999;">
+                        <!-- Lottie Animation in an iframe -->
+                    <iframe src="https://lottie.host/embed/0253666a-e63d-4e63-817c-6bc0bd1186ef/eWKMqDv3fh.json" style="border:none; width: 450px; height: 450px;"></iframe>
+                    
+
+                    </div>
+
+                    
                     <!-- Modal para finalizar registros -->
                     <div class="modal fade" id="finalizarModal" tabindex="-1" role="dialog"
                         aria-labelledby="finalizarModalLabel" aria-hidden="true">
@@ -261,25 +276,25 @@
         {% include 'adminlte/lib/_scripts.html' %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
         <script>
             $(document).ready(function () {
                 // Detectar clic en los botones y pasar el id al modal
                 $('.btn-repor').on('click', function () {
                     var id = $(this).data('id');
                     var granjaId = $(this).data('granja-id');
-                    var frigorificoId = $(this).data('frigorifico-id'); 
-                    $('#consecutivoDespacho').val(id);       
-                    $('#granja_id').val(granjaId); 
-                    $('#frigorifico_id').val(frigorificoId);          
+                    var frigorificoId = $(this).data('frigorifico-id');
+                    $('#consecutivoDespacho').val(id);
+                    $('#granja_id').val(granjaId);
+                    $('#frigorifico_id').val(frigorificoId);
                 });
-            });
 
-            $(document).ready(function () {
+                // Inicializar DataTable
                 $("#tabla_repdespacho").DataTable({
                     "order": [[0, "desc"]]
                 });
-            });
-            $(document).ready(function () {
+
+                // Manejar la finalización de registros
                 var consecutivoDisponibilidad = null;  // Almacenar el consecutivo
 
                 // Abrir modal de confirmación al hacer clic en "Finalizar Registros"
@@ -289,9 +304,9 @@
                     console.log("Consecutivo para finalizar:", consecutivoDisponibilidad);  // Verificar el consecutivo extraído
                 });
 
-                // Confirmar finalización de registros
+                // Confirmar finalización de registros con AJAX
                 $('#confirmarFinalizar').on('click', function () {
-                    console.log("Enviando solicitud AJAX para finalizar el registro con consecutivo:", consecutivoDisponibilidad);  // Verificar envío
+                    console.log("Enviando solicitud AJAX para finalizar el registro con consecutivo:", consecutivoDisponibilidad);
 
                     $.ajax({
                         url: "{% url 'finalizar_registro' %}",  // URL de la vista que manejará la actualización
@@ -301,27 +316,65 @@
                             'csrfmiddlewaretoken': '{{ csrf_token }}'  // Incluir el token CSRF aquí
                         },
                         success: function (response) {
-                            console.log("Respuesta del servidor:", response);  // Verificar la respuesta
+                            console.log("Respuesta del servidor:", response);
                             if (response.success) {
-                                $('#finalizarModal').modal('hide');
-                                location.reload();  // Recargar la página para ver los cambios
+                                alert('Registros finalizados con éxito.');
+                                $('#finalizarModal').modal('hide');  // Cerrar el modal de finalización
+                                location.reload();  // Recargar la página después del éxito
                             } else {
                                 alert('Error al finalizar los registros: ' + response.error);
                             }
                         },
                         error: function (xhr, status, error) {
-                            console.error("Error en la solicitud AJAX:", error);  // Verificar el error
+                            console.error("Error en la solicitud AJAX:", error);
                             alert('Ocurrió un error al finalizar los registros.');
                         }
                     });
                 });
+
+                // Evento de cambio en el campo retiroalimento para formatear la fecha correctamente
+                document.getElementById('retiroalimento').addEventListener('change', function (e) {
+                    var input = e.target.value;
+                    // Reemplazar la 'T' con un espacio y agregar ':00' para los segundos
+                    var formattedValue = input.replace('T', ' ') + ':00';
+                    e.target.value = formattedValue;
+                });
+
+                // Manejar el envío del formulario de despacho
+                $('#formDespacho').on('submit', function (e) {
+                    e.preventDefault();  // Evitar que el formulario haga una recarga de página
+
+                    var formData = $(this).serialize();  // Obtener los datos del formulario
+                    $('#loadingLottie').show();
+                    $.ajax({
+                        url: $(this).attr('action'),  // Form action URL
+                        method: 'POST',
+                        data: formData,
+                        success: function (response) {
+                            if (response.success) {
+                                // Keep the loading GIF visible for 3 seconds, then reload the page
+                                setTimeout(function () {
+                                    $('#loadingLottie').hide();  // Hide the GIF
+                                    location.reload();  // Reload the page after 3 seconds
+                                }, 3000);  // 3-second delay
+
+                                alert(response.message);  // Display success message
+                                $('#modalSalidasDespacho').modal('hide');  // Close the modal
+                            } else {
+                                $('#loadingLottie').hide();  // Hide the GIF on error
+                                alert(response.error);  // Display error message
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            $('#loadingLottie').hide();  // Hide the GIF on AJAX error
+                            alert('Ocurrió un error al registrar el despacho: ' + error);
+                        }
+                    });
+                });
             });
-            document.getElementById('retiroalimento').addEventListener('change', function (e) {
-                var input = e.target.value;
-                // Reemplazar la 'T' con un espacio y agregar ':00' para los segundos
-                var formattedValue = input.replace('T', ' ') + ':00';
-                e.target.value = formattedValue;
-            });
+
+        
+
         </script>
         <script src="{% static 'custom.js' %}"></script>
         {% endblock %}
